# ViasuperDev

./: .gitignore  README.md
.obsidian/: types.json  workspace.json
00_Templates_e_Scripts/_meta/: meta-contexto-llm.md
00_Templates_e_Scripts/_scripts/: .env.example  .gitignore  Makefile  README.md  jira-to-vault.sh  pyproject.toml  requirements-dev.txt  requirements.txt
00_Templates_e_Scripts/_scripts/templates/: ag.j2  processo.j2
00_Templates_e_Scripts/_scripts/tests/: test_delphi_chunker.py  test_indexer.py  test_jira_client.py  test_logging_config.py  test_parsers.py  test_vault_writer.py
00_Templates_e_Scripts/_scripts/viasuperdev/: cli.py  config.py  indexer.py  init_viasuperdev.py  jira_client.py  logging_config.py  parsers.py  vault_search.py  vault_writer.py
00_Templates_e_Scripts/_templates/: Template_AG.md  Template_Arquitetura.md  Template_Glossario.md  Template_Indice.md  Template_Padrao_Tecnico.md  Template_Processo.md  Template_Regra_Negocio.md
01_Indices/: Gerar_Nota_CredDeb.md  IDX-nota.md
02_Processos/nota/: PROC-001-gerar-notas-credito-debito-massa.md  PROC-002-importar-nf-e.md  PROC-003-nota-fiscal.md
02_Processos/pdv/: PROC-006-syncjet-importacao-cupons.md
02_Processos/pedido/: PROC-004-pedido.md  PROC-005-pedido-centralizado.md  PROC-007-analise-compra.md  PROC-008-recepcao-pedidos.md
03_Regras_Negocio/nota/: RN-001-filtro-data-obrigatorio.md  RN-002-duplicatas-elegiveis.md  RN-003-calculo-base-ajuste-ibs-cbs.md  RN-004-rateio-proporcional-itens.md  RN-005-item-imposto-menor-centavo.md  (+13 more)
06_Glossarios/: GLOS-nota.md
(+34 files in other folders)
